fix: fix top seller